apps/cyberstorm-remix/app/commonComponents/CheckboxList/CheckboxList.css
@layer nimbus-components {
  .checkbox-list {
    list-style: none;

    .checkbox-list__label {
      display: flex;
      gap: var(--gap-sm);
      align-items: center;
      justify-content: space-between;
      border-radius: var(--radius-md);
      color: var(--color-text-secondary);
      font-weight: var(--font-weight-regular);
      font-size: var(--font-size-body-md);
      cursor: pointer;
      transition: var(--animation-duration-xs);
      user-select: none;

      > span {
        display: inline-flex;
        flex-wrap: nowrap;
        gap: 0.75rem;
        align-items: center;
        padding: var(--space-8) 0 var(--space-8) var(--space-16);
      }

      &.checkbox-list__label--off {
        color: var(--color-text-secondary);

        svg {
          --icon-color: var(--color-surface-a8);
        }

        .checkbox-list__exclude-button svg {
          --icon-color: var(--color-surface-a8);
        }
      }

      &.checkbox-list__label--include {
        color: var(--color-cyber-green-7);
        font-weight: var(--font-weight-bold);

        .checkbox-list__checkbox-button svg {
          --icon-color: var(--color-cyber-green-7);
        }

        .checkbox-list__exclude-button svg {
          --icon-color: transparent;
        }
      }

      &.checkbox-list__label--exclude {
        color: var(--color-accent-red-7);
        font-weight: var(--font-weight-bold);

        .checkbox-list__exclude-button svg {
          --icon-color: var(--color-accent-red-7);
        }

        .checkbox-list__checkbox-button svg {
          --icon-color: var(--color-surface-a8);
        }
      }

      &:hover {
        color: var(--color-text-primary);
        background-color: var(--color-surface-a5);

        &.checkbox-list__label--off {
          color: var(--color-text-primary);

          svg {
            --icon-color: var(--color-surface-a10);
          }
        }

        &.checkbox-list__label--include {
          color: var(--color-cyber-green-8);

          .checkbox-list__checkbox-button svg {
            --icon-color: var(--color-cyber-green-8);
          }

          .checkbox-list__exclude-button svg {
            --icon-color: var(--color-accent-red-8);
          }
        }

        &.checkbox-list__label--exclude {
          color: var(--color-accent-red-8);

          .checkbox-list__checkbox-button svg {
            --icon-color: var(--color-surface-a10);
          }

          .checkbox-list__exclude-button svg {
            --icon-color: var(--color-accent-red-8);
          }
        }
      }
    }

    .checkbox-list__icon {
      display: flex;
      align-items: center;
      justify-content: center;
      width: var(--space-20);
      height: var(--space-20);

      --icon-inline-size: var(--space-20);

      background-color: transparent;
      transition: ease-out var(--animation-duration-xs);

      &.checkbox-list__exclude-button {
        --icon-inline-size: var(--space-16);

        width: calc(var(--space-20) + calc(var(--space-16) * 2));
        height: calc(var(--space-20) + calc(var(--space-8) * 2));
        padding: var(--space-8) var(--space-16);

        &:hover {
          --icon-color: var(--color-accent-red-8);
        }
      }
    }
  }
}

